updated form, need to fix the card visibility issue at the start. so close to finnishing this.

--- a/src/output.css
+++ b/src/output.css
@@ -444,6 +444,9 @@
   .cursor-pointer {
     cursor: pointer;
   }
+  .resize {
+    resize: both;
+  }
   .flex-col {
     flex-direction: column;
   }
